Added db scripts.Bug fix

--- a/src/main/resources/static/email/order_made.html
+++ b/src/main/resources/static/email/order_made.html
@@ -9,8 +9,7 @@
     <img src="cid:image">
 </div>
 <h2 align="Center">
-    Thank you for a booking. After you will pay for order you may get your
-    upcoming trip information and ticket.</h2>
+    Thank you for a booking. You have to pay for your order in 15 minutes, or it will be cancelled.</h2>
 <h1 align="Center">
     With Best Regards, Customer Team.
 </h1>
